--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width: device-width, initial-scale=1.0" />
-    <title>Vapi SDK Example | Jannis Moore</title>
+    <title>Nigatron</title>
     <style>
       body {
         font-family: monospace;
@@ -61,3 +61,4 @@
     </script>
   </body>
 </html>
+​
